testdata/baselines/reference/submodule/conformance/plainJSGrammarErrors4.errors.txt
plainJSGrammarErrors4.js(5,14): error TS2339: Property '#b' does not exist on type 'A'.


==== plainJSGrammarErrors4.js (1 errors) ====
    class A {
        #a;
        m() {
            this.#a; // ok
            this.#b; // error
                 ~~
!!! error TS2339: Property '#b' does not exist on type 'A'.
        }
    }
    